--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "install": "npm install && npm install --prefix backend && npm run build",
+    "start": "npm run dev --prefix backend"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "nodemailer": "^6.9.9",
     "react": "^18.2.0",
