--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "install": "npm install && npm install --prefix backend && npm run build",
+    "predeploy": "npm install && npm install --prefix backend && npm run build",
     "start": "npm run dev --prefix backend"
   },
   "dependencies": {
